--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,7 +137,7 @@
     text-decoration: none;
     background-color: transparent; }
     a:hover {
-      color: #6a9fb5;
+      color: #333333;
       text-decoration: underline; }
   
   a:not([href]):not([tabindex]) {
@@ -8143,7 +8143,7 @@
     -webkit-transition: .3s all ease;
     -o-transition: .3s all ease;
     transition: .3s all ease;
-    color: #333333; }
+    color: #6a9fb5; }
     a:hover, a:focus {
       text-decoration: none !important;
       outline: none !important;
