--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -308,10 +308,8 @@
       flex-direction: column;
       padding: 0;
     }
-    .course-info .image-container {
-      height: 200px; /* Adjust to desired crop height */
-    }
     .course-info .centered-text {
+      top: 30%;
       font-size: 20px;
     }
     .contact-info {
